--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,16 @@
     <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
   </properties> -->
 
-         <properties>
+         <!-- <properties>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
+</properties> -->
+
+<properties>
+    <maven.compiler.source>21</maven.compiler.source>
+    <maven.compiler.target>21</maven.compiler.target>
 </properties>
+
 
 
   <modules>
