--- a/pom.xml
+++ b/pom.xml
@@ -22,8 +22,8 @@
 </properties> -->
 
 <properties>
-    <maven.compiler.source>21</maven.compiler.source>
-    <maven.compiler.target>21</maven.compiler.target>
+  <maven.compiler.source>17</maven.compiler.source>
+<maven.compiler.target>17</maven.compiler.target>
 </properties>
 
 
@@ -96,10 +96,21 @@
           <version>2.8</version>
         </plugin>
 
-        <plugin>
+        <!-- <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>2.3.2</version>
-        </plugin>
+        </plugin> -->
+
+         <plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.11.0</version>
+    <configuration>
+        <source>17</source>
+        <target>17</target>
+    </configuration>
+</plugin>
+
 
         <plugin>
           <artifactId>maven-javadoc-plugin</artifactId>
